--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.js"></script>
     <script src="code.js"></script>
 
     <style>
         body{
             background-image: url("scale.jpg");
+        }
+        .container
+        {
+            background-color: rgba(255,255,255,.5);
         }
     </style>
 
@@ -39,7 +44,12 @@
         <br>
     <div class="form-group row">
         <label for="sex">Gender</label>
-        <input type="text" name="Gender" id="sex" class="form-control">
+        <select name="sex" id="sex">
+            <option disabled selected>&nbsp;</option>
+            <option>Male</option>
+            <option>Female</option>
+
+        </select>
     </div>
         <br>
     <div class="form-group row">
@@ -60,6 +70,7 @@
     <div class="form-group row">
         <button>Submit</button>
     </div>
+    <p id="output"></p>
     </div>
 
 </div>
